syntax = "proto3";
package tx.v1;

message Tx {
    uint32 type = 1;         // 0 for non-value, 1 for value
    string category = 2;     // INIT_DID, INIT_SESSION_KEY, NOTIF, EMAIL
    string source = 3;
    repeated string recipients = 4;
    bytes data = 5;          // data is also a protobuf message, depending on tx_type
    bytes salt = 6;
    bytes apiToken = 7;      // f(apiToken) = v1
    bytes signature = 8;
    string fee = 9;    
}